<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/homeNavID"
            android:icon="@drawable/ic_baseline_home_24"
            android:title ="@string/home"
            android:checked="true"
            />

        <item
            android:id="@+id/accountID"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title ="@string/myAccount"
            android:checked="true"
            />
        <item
            android:id="@+id/basketID"
            android:title="@string/basket"
            android:icon="@drawable/ic_baseline_book_24"
            />

    </group>

    <item
        android:title="@string/other"
        >
        <menu>
            <item
                android:id="@+id/aboutID"
                android:title="@string/aboutUs"
                android:icon="@drawable/ic_baseline_people_alt_24"
                />
            <item
                android:id="@+id/privacyID"
                android:title="@string/privacyPolicy"
                android:icon="@drawable/ic_baseline_privacy_tip_24"
                />

        </menu>

    </item>


</menu>