<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF7F7"
    tools:context=".HelpFragment">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpTitle"
            android:textColor="#683322"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            tools:ignore="MissingConstraints" />


        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="363dp"
            android:layout_height="400dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="25dp"
            android:scrollbars="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:text="@string/questionOne"
                            android:gravity="center"
                            android:background="@drawable/help_background"
                            android:textSize="17sp"
                            android:textColor="@color/black"></TextView>

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="70dp"
                            android:layout_marginTop="2dp"
                            android:textSize="17sp"
                            android:text="@string/questionAnswerOne"
                            android:background="@drawable/help_background2"
                            android:textColor="@color/black"></TextView>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:gravity="center"
                            android:text="@string/questionSecond"
                            android:background="@drawable/help_background"
                            android:layout_marginTop="25dp"
                            android:textColor="@color/black"
                            android:textSize="17sp"></TextView>


                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_marginTop="2dp"
                            android:layout_height="70dp"
                            android:gravity="center"
                            android:text="@string/questionAnswerSecond"
                            android:background="@drawable/help_background2"
                            android:textColor="@color/black"
                            android:textSize="17sp"></TextView>

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/help_background"
                            android:text="@string/questionThird"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="17sp"></TextView>
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_marginTop="2dp"
                            android:layout_height="70dp"
                            android:gravity="center"
                            android:text="@string/questionAnswerThird"
                            android:background="@drawable/help_background2"
                            android:textColor="@color/black"
                            android:textSize="17sp"></TextView>
                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="25dp"
                            android:gravity="center"
                            android:text="@string/questionFourth"
                            android:background="@drawable/help_background"
                            android:textColor="@color/black"
                            android:textSize="17sp"></TextView>
                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_marginTop="2dp"
                            android:layout_height="70dp"
                            android:gravity="center"
                            android:text="@string/questionAnswerFourth"
                            android:background="@drawable/help_background2"
                            android:textColor="@color/black"
                            android:textSize="17sp"></TextView>


                </LinearLayout>
        </ScrollView>

</FrameLayout>